# lev-chat

./: LICENSE  README.md  package-lock.json  package.json  setup_levchat.sh
.github/workflows/: main.yml
lev-chat/: build.yaml  package-lock.json  package.json
lev-chat/src/: A2.jsx  App.jsx  Chat.jsx  main.jsx  styles-old.jsx  styles.css  styles.jsx
lev-chat/src-tauri/: Cargo.toml  tauri.conf.json
lev-chat/src-tauri/src/: main.rs
lev-chat/src-tauri/src/lam/: llama.rs  llamautils.rs
lev-chat/src/llama/: llama.jsx  structured-prompt.rs
public/: conv.py  cov.py  test  test.rs
src/: .gitignore  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: .gitignore  llamtils.rs  main.rs
src-tauri/src/config/: config.rs  setup.rs
src-tauri/src/db/: db.rs
src-tauri/src/lam/: llama.rs  llamautils.rs  mod.rs  settings.rs
src-tauri/src/pty/: dsbox.rs  llams.rs  worker.rs
src/llama/: chat.jsx  lamastyles.jsx  llama.jsx  md.jsx  modelDownload.jsx  setup.jsx  side.jsx  sidebar.jsx
