[package]
name = "lev-chat"
version = "0.0.1"
description = "Desktop chat application for Local LLM inferencing and optional RAG"
authors = ["Edward Lampoh"]
license = "MIT"
repository = "https://github.com/edielam/lev-chat"
default-run = "lev-chat"
edition = "2021"
rust-version = "1.67.1"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
anyhow = "1.0.58"
futures = "0.3.27"
log = "0.4.17"
once_cell = "1.19.0"
tokio = { version = "1.27.0", features = ["full"] }
tauri = { version = "1.8.0", features = ["api-all"] }
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.1.0"
futures-util = "0.3.8"
serde_derive = "1.0"
mt_logger = "3.0.2"
tokio-tungstenite = "0.18.0"
portable-pty = "0.8.0"
dirs = "4.0.0"
whoami = "1.2.1"
uuid = "1.10.0"
lopdf = "0.34.0"
regex = "1.11.1"
lazy_static = "1.5.0"
env_logger = "0.10.0"
reqwest = { version = "0.12.9", features = ["json", "blocking", "stream"] }
pdf-extract = "0.7.10"
sysinfo = "0.32.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
